--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev:frontend": "pnpm --filter frontend dev",
+    "dev:backend": "pnpm --filter backend dev",
     "dev": "docker compose up",
     "lint": "pnpm -r lint",
     "test": "pnpm -r test"
