--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -18,6 +18,7 @@ ENV NODE_ENV=development
 WORKDIR /app
 COPY . .
 COPY --from=deps /app/node_modules ./node_modules
+COPY --from=deps /app/apps/backend/node_modules ./apps/backend/node_modules
 EXPOSE 4000
 CMD ["pnpm", "--filter", "./apps/backend", "dev"]
 
