frontendとbackendのECSでの起動確認

--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -1,7 +1,14 @@
 # ===== 共通ベース =====
 FROM node:24.11-slim AS base
 WORKDIR /app
+
+ENV HOME=/app
+ENV COREPACK_HOME=/app/.cache/node/corepack
 ENV NODE_ENV=production
+
+# Corepack のキャッシュディレクトリを作成（ビルド時は root 所有でOK）
+RUN mkdir -p /app/.cache/node/corepack
+
 # pnpm を使う
 RUN corepack enable
 
@@ -32,6 +39,7 @@ FROM base AS builder
 WORKDIR /app
 COPY . .
 COPY --from=deps /app/node_modules ./node_modules
+COPY --from=deps /app/apps/frontend/node_modules ./apps/frontend/node_modules
 # Next.js をビルド
 RUN pnpm --filter ./apps/frontend build
 
@@ -39,9 +47,15 @@ RUN pnpm --filter ./apps/frontend build
 FROM base AS runner
 ENV NODE_ENV=production
 WORKDIR /app
-# 実行ユーザ（任意）
-RUN addgroup --system nodejs && adduser --system nextjs --ingroup nodejs
-USER nextjs
+
+# ★ 実行ユーザのホームを /app にする
+RUN addgroup --system nodejs \
+ && adduser --system --home /app --ingroup nodejs nextjs
+
+# ★ Corepack キャッシュ含め /app 配下を nextjs に所有させる
+RUN mkdir -p /app/.cache/node/corepack \
+ && chown -R nextjs:nodejs /app
+
 
 # ビルド成果物と package.json だけコピー
 COPY --from=builder /app/apps/frontend ./apps/frontend
