--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -27,6 +27,7 @@ FROM base AS builder
 WORKDIR /app
 COPY . .
 COPY --from=deps /app/node_modules ./node_modules
+COPY --from=deps /app/apps/backend/node_modules ./apps/backend/node_modules
 RUN pnpm --filter ./apps/backend build
 
 # ===== 本番実行用 =====
@@ -35,6 +36,7 @@ ENV NODE_ENV=production
 WORKDIR /app
 COPY --from=builder /app/apps/backend/dist ./apps/backend/dist
 COPY --from=deps /app/node_modules ./node_modules
+COPY --from=deps /app/apps/backend/node_modules ./apps/backend/node_modules
 WORKDIR /app/apps/backend
 EXPOSE 4000
 CMD ["node", "dist/index.js"]
